human-intervention-logs/io.fabric8:kubernetes-model-coordination:7.7.0/gradle-test/gradle-test-2026-06-06T03-24-51-206249Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: io.fabric8:kubernetes-model-coordination:7.7.0
Command: `/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7909-edb6a42f/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 1 incompatible Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :jar
> Task :checkTestTimeoutAnnotations
> Task :processTestResources NO-SOURCE
> Task :tck-test-support:compileJava
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes
> Task :tck-test-support:jar

> Task :compileTestJava
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7909-edb6a42f/tests/src/io.fabric8/kubernetes-model-coordination/7.7.0/src/test/java/io_fabric8/kubernetes_model_coordination/Kubernetes_model_coordinationTest.java:158: error: cannot find symbol
                .withNewMetadata("continue-token", 3L, "77", "self-link")
                ^
  symbol:   method withNewMetadata(String,long,String,String)
  location: class LeaseListBuilder
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7909-edb6a42f/tests/src/io.fabric8/kubernetes-model-coordination/7.7.0/src/test/java/io_fabric8/kubernetes_model_coordination/Kubernetes_model_coordinationTest.java:282: error: cannot find symbol
                .withNewMetadata(null, 3L, "88", null)
                ^
  symbol:   method withNewMetadata(<null>,long,String,<null>)
  location: class LeaseCandidateListBuilder
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7909-edb6a42f/tests/src/io.fabric8/kubernetes-model-coordination/7.7.0/src/test/java/io_fabric8/kubernetes_model_coordination/Kubernetes_model_coordinationTest.java:356: error: cannot find symbol
                .withNewMetadata("next", 2L, "99", null)
                ^
  symbol:   method withNewMetadata(String,long,String,<null>)
  location: class LeaseCandidateListBuilder
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7909-edb6a42f/tests/src/io.fabric8/kubernetes-model-coordination/7.7.0/src/test/java/io_fabric8/kubernetes_model_coordination/Kubernetes_model_coordinationTest.java:438: error: no suitable constructor found for ListMeta(<null>,long,String,<null>)
        ListMeta listMetadata = new ListMeta(null, 1L, "resource-version", null);
                                ^
    constructor ListMeta.ListMeta() is not applicable
      (actual and formal argument lists differ in length)
    constructor ListMeta.ListMeta(String,Long,String,String,ShardInfo) is not applicable
      (actual and formal argument lists differ in length)
4 errors


> Task :compileTestJava FAILED

FAILURE: Build failed with an exception.
[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7909-edb6a42f/tests/src/io.fabric8/kubernetes-model-coordination/7.7.0/build/reports/problems/problems-report.html

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7909-edb6a42f/tests/src/io.fabric8/kubernetes-model-coordination/7.7.0/src/test/java/io_fabric8/kubernetes_model_coordination/Kubernetes_model_coordinationTest.java:438: error: no suitable constructor found for ListMeta(<null>,long,String,<null>)
          ListMeta listMetadata = new ListMeta(null, 1L, "resource-version", null);
                                  ^
      constructor ListMeta.ListMeta() is not applicable
        (actual and formal argument lists differ in length)
      constructor ListMeta.ListMeta(String,Long,String,String,ShardInfo) is not applicable
        (actual and formal argument lists differ in length)
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7909-edb6a42f/tests/src/io.fabric8/kubernetes-model-coordination/7.7.0/src/test/java/io_fabric8/kubernetes_model_coordination/Kubernetes_model_coordinationTest.java:158: error: cannot find symbol
                  .withNewMetadata("continue-token", 3L, "77", "self-link")
                  ^
    symbol:   method withNewMetadata(String,long,String,String)
    location: class LeaseListBuilder
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7909-edb6a42f/tests/src/io.fabric8/kubernetes-model-coordination/7.7.0/src/test/java/io_fabric8/kubernetes_model_coordination/Kubernetes_model_coordinationTest.java:282: error: cannot find symbol
                  .withNewMetadata(null, 3L, "88", null)
                  ^
    symbol:   method withNewMetadata(<null>,long,String,<null>)
    location: class LeaseCandidateListBuilder
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7909-edb6a42f/tests/src/io.fabric8/kubernetes-model-coordination/7.7.0/src/test/java/io_fabric8/kubernetes_model_coordination/Kubernetes_model_coordinationTest.java:356: error: cannot find symbol
                  .withNewMetadata("next", 2L, "99", null)
                  ^
    symbol:   method withNewMetadata(String,long,String,<null>)
    location: class LeaseCandidateListBuilder
  4 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.


For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.BUILD FAILED
 in 7s
13 actionable tasks: 5 executed, 8 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7909-edb6a42f/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for io.fabric8:kubernetes-model-coordination:7.7.0 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 7s
9 actionable tasks: 1 executed, 8 up-to-date
